# failwm

./: Cargo.toml  Justfile  README.md  TODO.md  rustfmt.toml
r3/: Cargo.toml
r3-msg/: Cargo.toml
r3-msg/src/: args.rs  main.rs
r3/src/: config.rs  macros.rs  main.rs  point.rs  tiler.rs  window_geometry.rs
r3/src/tiler/: mod.rs  node.rs
r3/src/wm/: cmd_handlers.rs  ignored_sequences.rs  mod.rs  windows.rs  x_handlers.rs
r3/test_integration/: README.md  mod.rs  test_window.rs  x_test_runner.rs
r3lib/: Cargo.toml
r3lib/src/: lib.rs
src/: macros.rs  main.rs  point.rs  rect.rs  wm.rs
src/wm/: handlers.rs  masks.rs  mod.rs  windows.rs
